WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216167
[macOS] UI process sometimes crashes under -[WKSharingServicePickerDelegate sharingService:didShareItems:]
https://bugs.webkit.org/show_bug.cgi?id=216167
Summary
[macOS] UI process sometimes crashes under -[WKSharingServicePickerDelegate s...
Wenson Hsieh
Reported
2020-09-03 21:28:05 PDT
<
rdar://problem/68287449
>
Attachments
Patch
(1.62 KB, patch)
2020-09-03 21:32 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-09-03 21:32:01 PDT
Created
attachment 407943
[details]
Patch
Wenson Hsieh
Comment 2
2020-09-04 07:53:15 PDT
Comment on
attachment 407943
[details]
Patch Thanks Anders!
EWS
Comment 3
2020-09-04 07:57:30 PDT
Committed
r266607
: <
https://trac.webkit.org/changeset/266607
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407943
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug