[macOS] UI process sometimes crashes under -[WKSharingServicePickerDelegate sharingService:didShareItems:] https://bugs.webkit.org/show_bug.cgi?id=216167 <rdar://problem/68287449>

Reviewed by Anders Carlsson.

It's not clear what causes the array of items in this delegate method to be empty, but we should at least be
robust against this scenario and avoid crashing the application process.

* UIProcess/mac/WKSharingServicePickerDelegate.mm:
(-[WKSharingServicePickerDelegate sharingService:didShareItems:]):


Canonical link: https://commits.webkit.org/228982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266607 268f45cc-cd09-0410-ab3c-d52691b4dbfc